k8s-scenarios/05-network-policies/network-policy.yaml
# k8s-scenarios/06-network-policies/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-demo-policy
  namespace: scenarios
spec:
  podSelector:
    matchLabels:
      app: netpol-demo
      role: backend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: backend
    ports:
    - protocol: TCP
      port: 80
